--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "license": "ISC",
     "devDependencies": {
         "cypress": "^6.5.0",
-        "cypress-iframe": "^1.0.1"
+        "cypress-iframe": "^1.0.1",
+        "mocha": "5.2.0",
+        "mochawesome": "^4.0.1"
     }
 }
