--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "multipleTest": "npm run test -- --spec \"cypress/integration/TestCases/01first_spec.js,cypress/integration/TestCases/Cy_02_Print_GetText.js\"",
         "runFolderTest": "npm run test -- --spec \"cypress/integration/runtsdemo/*\""
     },
-
     "author": "Bija",
     "license": "ISC",
     "devDependencies": {
         "cypress": "^6.5.0",
+        "cypress-file-upload": "^5.0.2",
         "cypress-iframe": "^1.0.1",
         "mocha": "5.2.0",
         "mochawesome": "^4.0.1"
