--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "headTest": "npm run test -- --headed",
         "chromeTest": "npm run test -- -- browser chrome",
         "recordDashBoardTest": "npm run test -- --record --key 6605097d-f0a9-4f12-bf8e-b53f5fd393b8 --reporter mochawesome",
-        "multipleTest": "npm run test -- --spec \"cypress/integration/TestCases/01first_spec.js,cypress/integration/TestCases/Cy_02_Print_GetText.js\"",
-        "runFolderTest": "npm run test -- --spec \"cypress/integration/runtsdemo/*\""
+        "multipleTest": "npm run test -- --spec \"cypress/e2e/TestCases/01first_spec.js,cypress/e2e/TestCases/Cy_02_Print_GetText.js\"",
+        "runFolderTest": "npm run test -- --spec \"cypress/e2e/runtsdemo/*\""
     },
     "author": "Bija",
     "license": "ISC",
