--- a/package.json
+++ b/package.json
@@ -4,20 +4,41 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "node_modules\\.bin\\cypress run",
-        "headTest": "npm run test -- --headed",
-        "chromeTest": "npm run test -- -- browser chrome",
-        "recordDashBoardTest": "npm run test -- --record --key 6605097d-f0a9-4f12-bf8e-b53f5fd393b8 --reporter mochawesome",
-        "multipleTest": "npm run test -- --spec \"cypress/e2e/TestCases/01first_spec.js,cypress/e2e/TestCases/Cy_02_Print_GetText.js\"",
-        "runFolderTest": "npm run test -- --spec \"cypress/e2e/runtsdemo/*\""
+        "browser:chrome": "cypress run --browser=chrome --headed --spec cypress/e2e/run-demo/*.js --reporter mocha-allure-reporter" ,
+        "report:allure": "allure generate allure-results -clean -o allure-report && allure open allure- report" ,
+
+        "pretest": "npx rimraf ./cypress/reports",
+        "test:folder": "npm run pretest && npm run folder-run-demo && npm run posttest",
+        "folder-run-demo": "cypress run --browser chrome --headed --spec \"cypress/e2e/run-demo/*.test.js\"",
+        "test:smoke": "npm run pretest && npm run run-smoke && npm run posttest",
+        "run-smoke": "cypress run --browser chrome --headed --env grep=@smoke",
+        "test:regression": "npm run pretest && npm run run:regression && npm run posttest",
+        "run:regression": "cypress run --browser chrome --headed --env grep=@regression --spec \"cypress/e2e/run-demo/*.test.js\"",
+        "test:sanity": "npm run pretest && npm run run:sanity && npm run posttest",
+        "run:sanity": "cypress run --browser chrome --headed --env grep=@sanity --spec \"cypress/e2e/run-demo/*.test.js\"",
+        "posttest": "npm run merge-reports && npm run generate-html-report",
+        "merge-reports": "npx mochawesome-merge ./cypress/reports/*.json  --verbose > ./cypress/reports/mochawesome_001.json",
+        "marge": "npx marge ./cypress/reports/mochawesome_001.json --reportDir ./cypress/reports",
+        "generate-html-report": "npx marge ./cypress/reports/mochawesome_001.json --reportDir ./cypress/reports --inline true --overwrite"
     },
     "author": "Bija",
     "license": "ISC",
-    "devDependencies": {
+    "dependencies": {
+        "browserstack-cypress-cli": "^1.32.7",
         "cypress": "^14.3.3",
-        "cypress-file-upload": "^5.0.2",
+        "cypress-downloadfile": "^1.2.4",
+        "typescript": "^5.8.3"
+    },
+    "devDependencies": {
+        "allure-commandline": "^2.34.0",
+        "cypress-file-upload": "^5.0.8",
+        "cypress-grep": "^3.0.4",
         "cypress-iframe": "^1.0.1",
-        "mocha": "^11.2.2",
-        "mochawesome": "^7.1.3"
+        "cypress-mochawesome-reporter": "^3.8.2",
+        "del": "^8.0.0",
+        "glob": "^11.0.2",
+        "mocha-allure-reporter": "^1.4.0",
+        "mochawesome-merge": "^5.0.0",
+        "rimraf": "^6.0.1"
     }
 }
