--- a/package.json
+++ b/package.json
@@ -4,35 +4,29 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "browser:chrome": "cypress run --browser=chrome --headed --spec cypress/e2e/run-demo/*.js --reporter mocha-allure-reporter" ,
-        "report:allure": "allure generate allure-results -clean -o allure-report && allure open allure- report" ,
-
-        "pretest": "npx rimraf ./cypress/reports",
-        "test:folder": "npm run pretest && npm run folder-run-demo && npm run posttest",
-        "folder-run-demo": "cypress run --browser chrome --headed --spec \"cypress/e2e/run-demo/*.test.js\"",
+        "pretest": "npx rimraf allure-results && npx rimraf allure-report",
+        "test:folder": "npm run pretest && npm run run-folder && npm run posttest",
+        "run-folder": "cypress run --browser=chrome --headed --spec cypress/e2e/run-demo/*.js --reporter mocha-allure-reporter",
         "test:smoke": "npm run pretest && npm run run-smoke && npm run posttest",
-        "run-smoke": "cypress run --browser chrome --headed --env grep=@smoke",
+        "run-smoke": "cypress run --browser chrome --headed --env grep=@smoke --reporter mocha-allure-reporter",
         "test:regression": "npm run pretest && npm run run:regression && npm run posttest",
-        "run:regression": "cypress run --browser chrome --headed --env grep=@regression --spec \"cypress/e2e/run-demo/*.test.js\"",
+        "run:regression": "cypress run --browser chrome --headed --env grep=@regression --reporter mocha-allure-reporter",
         "test:sanity": "npm run pretest && npm run run:sanity && npm run posttest",
-        "run:sanity": "cypress run --browser chrome --headed --env grep=@sanity --spec \"cypress/e2e/run-demo/*.test.js\"",
-        "posttest": "npm run merge-reports && npm run generate-html-report",
-        "merge-reports": "npx mochawesome-merge ./cypress/reports/*.json  --verbose > ./cypress/reports/mochawesome_001.json",
-        "marge": "npx marge ./cypress/reports/mochawesome_001.json --reportDir ./cypress/reports",
-        "generate-html-report": "npx marge ./cypress/reports/mochawesome_001.json --reportDir ./cypress/reports --inline true --overwrite"
+        "run:sanity": "cypress run --browser chrome --headed --env grep=@sanity --reporter mocha-allure-reporter",
+        "posttest": "allure generate allure-results --clean -o allure-report && allure open allure-report"
     },
     "author": "Bija",
     "license": "ISC",
     "dependencies": {
         "browserstack-cypress-cli": "^1.32.7",
-        "cypress": "^14.3.3",
         "cypress-downloadfile": "^1.2.4",
         "typescript": "^5.8.3"
     },
     "devDependencies": {
+        "@cypress/grep": "^4.1.0",
         "allure-commandline": "^2.34.0",
+        "cypress": "^14.3.3",
         "cypress-file-upload": "^5.0.8",
-        "cypress-grep": "^3.0.4",
         "cypress-iframe": "^1.0.1",
         "cypress-mochawesome-reporter": "^3.8.2",
         "del": "^8.0.0",
